; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_seg6_local.c_cmp_nla_iif.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_seg6_local.c_cmp_nla_iif.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seg6_local_lwt = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.seg6_local_lwt*, %struct.seg6_local_lwt*)* @cmp_nla_iif to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_nla_iif(%struct.seg6_local_lwt* %0, %struct.seg6_local_lwt* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.seg6_local_lwt*, align 8
  %5 = alloca %struct.seg6_local_lwt*, align 8
  store %struct.seg6_local_lwt* %0, %struct.seg6_local_lwt** %4, align 8
  store %struct.seg6_local_lwt* %1, %struct.seg6_local_lwt** %5, align 8
  %6 = load %struct.seg6_local_lwt*, %struct.seg6_local_lwt** %4, align 8
  %7 = getelementptr inbounds %struct.seg6_local_lwt, %struct.seg6_local_lwt* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.seg6_local_lwt*, %struct.seg6_local_lwt** %5, align 8
  %10 = getelementptr inbounds %struct.seg6_local_lwt, %struct.seg6_local_lwt* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %8, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %15

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %13
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
